--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -307,12 +307,14 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
         <LI><FONT face=Verdana size=2>Move catch block to throws declaration: 
         Available on the catch statement.</FONT> 
         <LI><FONT face=Verdana size=2>Assign expression statements to a local 
-        variable or field: Available on all expression statements. 
-        e.g.:&nbsp;</FONT> <TT><FONT face=Verdana size=2>&nbsp;&nbsp; 
-        vector.iterator();</FONT></TT> <FONT face=Verdana size=2><BR>will be 
-        transformed to<BR><TT>&nbsp;&nbsp; Iterator iterator= 
-        vector.iterator();</TT> <BR>Quick assist will guess a variable name for 
-        you.</FONT> </LI></UL></TD></TR>
+          variable or field: Available on all expression statements. e.g.:&nbsp;</FONT> 
+          <TT><FONT face=Verdana size=2>&nbsp;&nbsp;<code> vector.iterator();</code></FONT></TT> 
+          <FONT face=Verdana size=2><BR>
+          will be transformed to<BR>
+          <TT>&nbsp;&nbsp; </TT><code>Iterator iterator= vector.iterator();</code></FONT> 
+          <FONT face=Verdana size=2><BR>
+          Quick assist will guess a variable name for you.</FONT> </LI>
+      </UL></TD></TR>
   <TR>
     <TD colSpan=2>
       <HR>
@@ -357,7 +359,9 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       quick fixes. This provides an easy way to declare new local variables, parameters, 
       and fields without having to break stride.</TD>
   </TR>	
-
+  <TR>
+    <TD vAlign=top colSpan=2><HR></TD>
+  </TR>
   <TR>
     <TD vAlign=top colSpan=2>&nbsp;</TD>
   </TR>
@@ -433,9 +437,12 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   </TR>
   <TR>
     <TD vAlign=top align=left width="30%"><b>Hyperlinked Java code</b></TD>
-    <TD vAlign=top width="70%">While hovering over Java code, pressing the CTRL 
-      key and moving the mouse turns class, method, and field identifiers into 
-      clickable links to the corresponding declaration.</TD>
+    <TD vAlign=top width="70%">
+      <p>While hovering over Java code, pressing the CTRL key and moving the mouse 
+        turns class, method, and field identifiers into clickable links to the 
+        corresponding declaration.</p>
+      <p><img src="images/hyperlinking.gif"></p>
+    </TD>
   </TR>	
 
   <TR>
@@ -443,10 +450,10 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   </TR>
   <TR>
     <TD vAlign=top align=left width="30%"><b>Scroll to the next method</b></TD>
-    <TD vAlign=top width="70%">Use CTRL+SHIFT+DownArrow (Edit &gt; Move to Next 
-      Member) and CTRL+SHIFT+UpArrow (Edit &gt; Move to Previous Member) in the 
-      Java editor to quickly navigate between member methods, fields, initializers, 
-      and types. </TD>
+    <TD vAlign=top width="70%">Use CTRL + SHIFT+ Arrow Down(<strong>Navigate &gt; 
+      Go To &gt; Next Member</strong>) and CTRL + SHIFT + Arrow Up (<strong>Navigate 
+      &gt; Go To &gt; Previous Member</strong>) in the Java editor to quickly 
+      navigate between member methods, fields, initializers, and types. </TD>
   </TR>	
 	
 	
@@ -512,9 +519,9 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       <P><B><FONT face=Verdana size=2>Go to last edit 
       position</FONT></B> </P></TD>
     <TD vAlign=top width="70%"><FONT face=Verdana size=2>Press Ctrl+Q (<B>Navigate 
-      &gt; Go to Last Edit Position</B>) in any text-based editor to take you 
+      &gt; Go to Last Edit Location</B>) in any text-based editor to take you 
       back to the place where you last made a change. A button marked <IMG height=16 alt="Go to last edit postion" 
-      src="images/last_edit_pos.gif" width=16 border=0> shows up in the toolbar 
+      src="images/last_edit_pos.gif" width=16 border=0> appears in the toolbar 
       when the <B>Editor Navigation</B> action set is enabled.</FONT> </TD>
   </TR>
   <TR>
