--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -647,26 +647,34 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   </TR>
   <TR>
     <TD vAlign=top align=left width="30%"><b>Inline Method</b></TD>
-    <TD vAlign=top width="70%">Inlines calls to a particular Java method, either 
-      at a selected call site or everywhere a particular method is called</TD>
+    <TD vAlign=top width="70%">
+      <p>Inlines calls to a particular Java method, either at a selected call 
+        site or everywhere a particular method is called</p>
+      <p><img src="images/inlineMethod.gif" width="408" height="229"></p>
+    </TD>
   </TR>	
    <TR>
     <TD vAlign=top colSpan=2><HR></TD>
   </TR>
   <TR>
     <TD vAlign=top align=left width="30%"><b>Inline Constant</b></TD>
-    <TD vAlign=top width="70%">inlines uses of a particular Java static final 
-      field, either at a selected reference site or everywhere a particular field 
-      is referenced.</TD>
+    <TD vAlign=top width="70%">
+      <p>inlines uses of a particular Java static final field, either at a selected 
+        reference site or everywhere a particular field is referenced.</p>
+      <p><img src="images/inlineConstant.gif" width="408" height="229"></p>
+    </TD>
   </TR>	
   <TR>
     <TD vAlign=top colSpan=2><HR></TD>
   </TR>
   <TR>
     <TD vAlign=top align=left width="30%"><b>Convert Local Variable to Field</b></TD>
-    <TD vAlign=top width="70%">allows you to turn a local variable into a field. 
-      If the variable is initialized on creation, then the operation moves the 
-      initialization to the new field's declaration or to the class's constructors.</TD>
+    <TD vAlign=top width="70%">
+      <p>allows you to turn a local variable into a field. If the variable is 
+        initialized on creation, then the operation moves the initialization to 
+        the new field's declaration or to the class's constructors.</p>
+      <p><img src="images/convert_local_to_field.gif" width="447" height="425"></p>
+    </TD>
   </TR>	
   <TR>
     <TD vAlign=top colSpan=2><HR></TD>
@@ -674,7 +682,10 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   <TR>
     <TD vAlign=top align=left width="30%"><b>Convert Anonymous Class to Nested 
       Class</b></TD>
-    <TD vAlign=top width="70%">applies to the selected anonymous class declaration.</TD>
+    <TD vAlign=top width="70%">
+      <p>applies to the selected anonymous class declaration.</p>
+      <p><img src="images/convert_anonymous_to_nested.gif" width="466" height="360"></p>
+    </TD>
   </TR>	
   <TR>
     <TD vAlign=top colSpan=2><HR></TD>
@@ -682,44 +693,59 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   <TR>
     <TD vAlign=top align=left width="30%"><b>Convert Member Type to Top Level 
       Level Type</b></TD>
-    <TD vAlign=top width="70%">Creates a new Java compilation unit for the selected 
-      inner class, updating all references as needed. For non-static inner classes, 
-      a field is added to allow access to the former enclosing instance.</TD>
+    <TD vAlign=top width="70%">
+      <p>Creates a new Java compilation unit for the selected inner class, updating 
+        all references as needed. For non-static inner classes, a field is added 
+        to allow access to the former enclosing instance.</p>
+      <p><img src="images/convert_member_type_to_top_level.gif" width="408" height="189"></p>
+    </TD>
   </TR>
   <TR>
     <TD vAlign=top colSpan=2><HR></TD>
   </TR>
   <TR>
     <TD vAlign=top align=left width="30%"><b>Change Method Signature</b></TD>
-    <TD vAlign=top width="70%"> lets you can change the signature of a method 
-      to add or remove parameters, or change parameter or return types. These 
-      changes are applied to the declaration of the method, anywhere the method 
-      is overridden or implemented, and anywhere it is called. </TD>
+    <TD vAlign=top width="70%"> 
+      <p>lets you can change the signature of a method to add or remove parameters, 
+        or change parameter or return types. These changes are applied to the 
+        declaration of the method, anywhere the method is overridden or implemented, 
+        and anywhere it is called. </p>
+      <p><img src="images/change_signature.gif" width="482" height="389"></p>
+    </TD>
   </TR>		
   <TR>
     <TD vAlign=top colSpan=2><HR></TD>
   </TR>
   <TR>
     <TD vAlign=top align=left width="30%"><b>Extract Constant</b></TD>
-    <TD vAlign=top width="70%">Creates a static final field from the selected 
-      expression and substitutes a field reference, and optionally rewrites other 
-      places where the same expression occurs.</TD>
+    <TD vAlign=top width="70%">
+      <p>Creates a static final field from the selected expression and substitutes 
+        a field reference, and optionally rewrites other places where the same 
+        expression occurs.</p>
+      <p><img src="images/extract_constant.gif" width="446" height="281"></p>
+    </TD>
   </TR>	
   <TR>
     <TD vAlign=top colSpan=2><HR></TD>
   </TR>
   <TR>
     <TD vAlign=top align=left width="30%"><b>Extract Interface</b></TD>
-    <TD vAlign=top width="70%">Creates a new interface with a set of method and 
-      makes the selected class implement the interface, optionally changing references 
-      to the class to the new interface wherever possible.</TD>
+    <TD vAlign=top width="70%">
+      <p>Creates a new interface with a set of method and makes the selected class 
+        implement the interface, optionally changing references to the class to 
+        the new interface wherever possible.</p>
+      <p><img src="images/extract_interface.gif" width="465" height="313"></p>
+    </TD>
   </TR>	
   <TR>
     <TD vAlign=top colSpan=2><HR></TD>
   </TR>
   <TR>
     <TD vAlign=top align=left width="30%"><b>Use Supertype Where Possible</b></TD>
-    <TD vAlign=top width="70%">Replaces usages of a type with one of its supertypes</TD>
+    <TD vAlign=top width="70%">
+      <p>Replaces usages of a type with one of its supertypes</p>
+      <p><img src="images/use_supertype.gif" width="408" height="258"></p>
+    </TD>
   </TR>
 		
 </table>
