*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_editors.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_editors.htm
@@ -155,7 +155,7 @@ outliners</a> for more detail. </P>
 
 <P >
 We'll look at the implementation of text editors in <a href="editors_jface.htm">Text
-editors and JFace text</a>. </P>
+editors and platform text</a>. </P>
 
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corp. and others 2000,2002." width="250" height="12"></a></p>
