--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -834,11 +834,14 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   <TR>
     <TD vAlign=top align=left width="30%"><b>Java compiler catches assignments 
       that have no effect</b></TD>
-    <TD vAlign=top width="70%">The Java compiler now gives you a warning when 
-      you appear to be assigning a variable with its own value. This helps catch 
-      a subtle mistake in setter methods and constructor declarations where the 
-      name of a parameter is close to the name of a field: for example, void setFoo(int 
-      newFoo) { this.foo = foo; } </TD>
+    <TD vAlign=top width="70%">
+      <p>The Java compiler now gives you a warning when you appear to be assigning 
+        a variable with its own value. This helps catch a subtle mistake in setter 
+        methods and constructor declarations where the name of a parameter is 
+        close to the name of a field: for example, void setFoo(int newFoo) { this.foo 
+        = foo; } </p>
+      <p><img src="images/noop_assignments.gif" width="404" height="109"></p>
+    </TD>
   </TR>	
   <TR>
     <TD vAlign=top colSpan=2><hr></TD>
@@ -849,25 +852,32 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       (Java / Compiler), you can now configure these for a specific Java project 
       through the new Java Compiler property page on each Java project.</TD>
   </TR>	
+    <TR>
+    <TD vAlign=top colSpan=2>
+      <HR>
+    </TD></TR>
   <TR>
-    <TD vAlign=top colSpan=2><HR></TD>
-  </TR>
+    <TD vAlign=top align=left width="30%">
+      <P align=right><B><FONT face=Verdana size=2>Hierarchical vs. flat layout 
+      of packages</FONT></B> </P></TD>
+    <TD vAlign=top width="70%"><FONT face=Verdana size=2>An option on the Java 
+      Packages (and Package Explorer) view allows you to change the way packages 
+      are displayed. <B>Hierarchical</B> displays packages in a tree, with 
+      subpackages below packages; <B>Flat</B> displays them as the traditional 
+      way, as a flat list where all packages and subpackages as siblings.</FONT> 
+    </TD></TR>
+	    <TR>
+    <TD vAlign=top colSpan=2>
+      <HR>
+    </TD></TR>
   <TR>
-    <TD vAlign=top align=left width="30%"><b>Hierarchical view of package structure</b></TD>
-    <TD vAlign=top width="70%">There's a new Layout view menu option in the Java 
-      Package Explorer which controls whether packages are displayed as a tree 
-      (subpackages below packages) instead of a flat list (default).</TD>
-  </TR>	
- <TR>
-    <TD vAlign=top colSpan=2><HR></TD>
-  </TR>
-  <TR>
-    <TD vAlign=top align=left width="30%"><b>Prefer to see static methods and 
-      fields grouped together?</b></TD>
-    <TD vAlign=top width="70%">There is a new preference page (Java / Compiler 
-      / Members Sort Order) for controlling the sort order of various different 
-      kinds of members in Java views.</TD>
-  </TR>
+    <TD vAlign=top align=left width="30%">
+      <P align=right><B><FONT face=Verdana size=2>Logical packages</FONT></B> 
+      </P></TD>
+    <TD vAlign=top width="70%"><FONT face=Verdana size=2>The Java Packages 
+      view (Java Browsing perspective) coalesces packages of the same name 
+      across source folders within a project. This presents a view of a logical 
+      package.</FONT> </TD></tr>	
    <TR>
     <TD vAlign=top colSpan=2>
       <HR>
@@ -889,32 +899,8 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       </UL>
       <P align=center><FONT face=Verdana size=2><IMG height=291 
       src="images/buildPathUI.gif" width=408> </FONT></P></TD></TR>
-    <TR>
-    <TD vAlign=top colSpan=2>
-      <HR>
-    </TD></TR>
-  <TR>
-    <TD vAlign=top align=left width="30%">
-      <P align=right><B><FONT face=Verdana size=2>Logical packages</FONT></B> 
-      </P></TD>
-    <TD vAlign=top width="70%"><FONT face=Verdana size=2>The Java Packages 
-      view (Java Browsing perspective) coalesces packages of the same name 
-      across source folders within a project. This presents a view of a logical 
-      package.</FONT> </TD></tr>
-  <TR>
-    <TD vAlign=top colSpan=2>
-      <HR>
-    </TD></TR>
-  <TR>
-    <TD vAlign=top align=left width="30%">
-      <P align=right><B><FONT face=Verdana size=2>Hierarchical vs. flat layout 
-      of packages</FONT></B> </P></TD>
-    <TD vAlign=top width="70%"><FONT face=Verdana size=2>An option on the Java 
-      Packages (and Package Explorer) view allows you to change the way packages 
-      are displayed. <B>Hierarchical</B> displays packages in a tree, with 
-      subpackages below packages; <B>Flat</B> displays them as the traditional 
-      way, as a flat list where all packages and subpackages as siblings.</FONT> 
-    </TD></TR>
+
+
   <TR>
     <TD colSpan=2>
       <HR>
@@ -1059,8 +1045,7 @@ border=0></FONT></P></TD></TR>
     <TD width="70%"><FONT face=Verdana size=2>The <B>Java / Task Tags 
       </B>preference page is used to configure the workspace-wide presentation 
       of task tags appearing in Java comments.</FONT> 
-      <P align=center><IMG src="images/task-tags.gif" 
-      width=427 border=0></P></TD></TR>
+      <P align=center><IMG src="images/task-tags.gif" ></P></TD></TR>
 </table>
 <hr>
 </body>
