*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/editors_annotations.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors_annotations.htm
@@ -33,7 +33,9 @@ changes in order to keep the annotations up to date with the text.&nbsp;&nbsp;</
 <p><b><a href="../reference/api/org/eclipse/ui/texteditor/MarkerAnnotationModel.html"> MarkerAnnotationModel</a></b>
  defines a model for annotations that represent a marker on a resource in the
 workspace.&nbsp; (See <a href="resAdv_markers.htm">Resource markers</a> for more
-information on markers.)&nbsp; This is best understood by examining the Java
+information on markers.)&nbsp; It assigns an image and description to each
+resource marker in order to display it in the ruler.&nbsp;&nbsp;</p>
+<p>Annotations are best understood by examining the Java
 editor example and its use of rulers and annotations.</p>
 <h4>Vertical ruler</h4>
 <p>override createVerticalRuler in edtior class (explain TextEditor
