*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -277,12 +277,12 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       <P align=right><B><FONT face=Verdana size=2>Find in file</FONT></B> 
 </P></TD>
     <TD width="70%"><FONT face=Verdana size=2>The Search menu group contains a 
-      new command to search for all occurrences of types, fields, methods and 
-      local variables inside the compilation unit or class file declared the element. 
-      Consistent with other search commands, markers are generated and presented 
-      as annotations in the editor. Entries in the Search Results view have different 
-      icons for read and write access. For example, the search results for "fName" 
-      in "TestCase.java" look like:.</FONT> 
+      new command (<b>Occurrences in File</b>) to search for all occurrences of 
+      types, fields, methods and local variables inside the compilation unit or 
+      class file declared the element. Consistent with other search commands, 
+      markers are generated and presented as annotations in the editor. Entries 
+      in the Search Results view have different icons for read and write access. 
+      For example, the search results for "fName" in "TestCase.java" look like:.</FONT> 
       <P align=center><FONT face=Verdana size=2><IMG 
       src="images/search.gif" border=0></FONT></P></TD></TR>
   <TR>
@@ -363,9 +363,6 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     <TD vAlign=top colSpan=2><HR></TD>
   </TR>
   <TR>
-    <TD vAlign=top colSpan=2>&nbsp;</TD>
-  </TR>
-  <TR>
     <TD vAlign=top align=left width="30%"><b>More Quick Fixes</b></TD>
     <TD vAlign=top width="70%">Click the light bulb in the left margin of the 
       Java editor to get help with fixing compiler-detected problems, including: 
@@ -381,8 +378,8 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     <TD vAlign=top align=left width="30%"><b>Code completion improvements</b></TD>
     <TD vAlign=top width="70%">
       <p>The Java compiler does a better job of rating the relevance of a proposal 
-        based on the type expected in the context. For instance, for StringBuffer 
-        sb= new [code assist], StringBuffer now shows up first on the list.</p>
+        based on the type expected in the context. For instance, for <code>StringBuffer 
+        sb= new [code assist]</code>, StringBuffer now shows up first on the list.</p>
       <img src="images/smart_code_assist.gif">
     </TD>
   </TR>		
@@ -406,7 +403,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     <TD vAlign=top width="70%">
       <p>The Java editor automatically determines the right amount of indentation 
         to use when pasting code. This behavior is controlled by a preference 
-        setting on the Java / Editor / Typing panel.</p>
+        setting on the<b> Java / Editor / Typing</b> panel.</p>
       <p><img src="images/paste_indent.gif"></p>
     </TD>
   </TR>	
@@ -417,8 +414,8 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     <TD vAlign=top align=left width="30%"><b>Improved Java outline view</b></TD>
     <TD vAlign=top width="70%">You can adjust the Java outline to show just the 
       members of the compilation unit's main type by pressing the leftmost button 
-      <img src="images/gointo_toplevel_type.gif" width="16" height="16">(Go Into 
-      Top Level Type) in the Outline view toolbar.</TD>
+      <img src="images/gointo_toplevel_type.gif" width="16" height="16">(<b>Go 
+      Into Top Level Type</b>) in the Outline view toolbar.</TD>
   </TR>	
   <TR>
     <TD vAlign=top colSpan=2><HR></TD>
@@ -428,7 +425,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     <TD vAlign=top width="70%">
       <p>The Java editor now offers improved customizability for the visual appearance 
         of errors, warning, tasks, etc. These preference settings are found on 
-        the Java / Editor / Annotations panel.</p>
+        the <b>Java / Editor / Annotations</b> panel.</p>
       <p><img src="images/annotations_pref_page.gif"></p>
     </TD>
   </TR>	
@@ -437,10 +434,11 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   </TR>
   <TR>
     <TD vAlign=top align=left width="30%"><b>Hyperlinked Java code</b></TD>
-    <TD vAlign=top width="70%">
+    <TD vAlign=top width="70%"> 
       <p>While hovering over Java code, pressing the CTRL key and moving the mouse 
         turns class, method, and field identifiers into clickable links to the 
-        corresponding declaration.</p>
+        corresponding declaration. This option can be confugured via the <b>Java 
+        / Editor / Navigation</b> panel.</p>
       <p><img src="images/hyperlinking.gif"></p>
     </TD>
   </TR>	
@@ -449,7 +447,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     <TD vAlign=top colSpan=2><HR></TD>
   </TR>
   <TR>
-    <TD vAlign=top align=left width="30%"><b>Scroll to the next method</b></TD>
+    <TD vAlign=top align=left width="30%"><b>Scroll to the next member</b></TD>
     <TD vAlign=top width="70%">Use CTRL + SHIFT+ Arrow Down(<strong>Navigate &gt; 
       Go To &gt; Next Member</strong>) and CTRL + SHIFT + Arrow Up (<strong>Navigate 
       &gt; Go To &gt; Previous Member</strong>) in the Java editor to quickly 
@@ -567,8 +565,8 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
         the refactoring. Click <B>OK</B> to execute the refactoring without further 
         ado, or click <B>Preview</B> to see its effects before deciding whether 
         to go ahead.</FONT></P>
-      <P align=center><FONT face=Verdana size=2><IMG height=227 
-      src="images/refactoring.gif" width=466></FONT></P></TD></tr>
+      <P align=center><FONT face=Verdana size=2><IMG 
+      src="images/refactoring.gif" ></FONT></P></TD></tr>
 	    <TR>
     <TD colSpan=2>
       <HR>
@@ -757,8 +755,11 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   </TR>
   <TR>
     <TD vAlign=top align=left width="30%"><b>Running all unit tests</b></TD>
-    <TD vAlign=top width="70%">The JUnit test runner now gives you an easy way 
-      to run all tests in a specified Java project, source folder, or package.</TD>
+    <TD vAlign=top width="70%">
+      <p>The JUnit test runner now gives you an easy way to run all tests in a 
+        specified Java project, source folder, or package.</p>
+      <p><img src="images/junit_config.gif" width="374" height="351"></p>
+    </TD>
   </TR>
     <TR>
     <TD vAlign=top colSpan=2><HR></TD>
@@ -849,8 +850,8 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   <TR>
     <TD vAlign=top align=left width="30%"><b>Project-specific Java compiler settings</b></TD>
     <TD vAlign=top width="70%">In addition to workspace-wide Java compiler settings 
-      (Java / Compiler), you can now configure these for a specific Java project 
-      through the new Java Compiler property page on each Java project.</TD>
+      (<b>Java / Compiler</b>), you can now configure these for a specific Java 
+      project through the new Java Compiler property page on each Java project.</TD>
   </TR>	
     <TR>
     <TD vAlign=top colSpan=2>
@@ -860,11 +861,13 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     <TD vAlign=top align=left width="30%">
       <P align=right><B><FONT face=Verdana size=2>Hierarchical vs. flat layout 
       of packages</FONT></B> </P></TD>
-    <TD vAlign=top width="70%"><FONT face=Verdana size=2>An option on the Java 
-      Packages (and Package Explorer) view allows you to change the way packages 
-      are displayed. <B>Hierarchical</B> displays packages in a tree, with 
-      subpackages below packages; <B>Flat</B> displays them as the traditional 
-      way, as a flat list where all packages and subpackages as siblings.</FONT> 
+    <TD vAlign=top width="70%">
+      <p><FONT face=Verdana size=2>An option on the Java Packages (and Package 
+        Explorer) view allows you to change the way packages are displayed. <B>Hierarchical</B> 
+        displays packages in a tree, with subpackages below packages; <B>Flat</B> 
+        displays them as the traditional way, as a flat list where all packages 
+        and subpackages as siblings.</FONT> </p>
+      <p><img src="images/hierarchical_layout.gif" width="329" height="220"> </p>
     </TD></TR>
 	    <TR>
     <TD vAlign=top colSpan=2>
@@ -874,10 +877,12 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     <TD vAlign=top align=left width="30%">
       <P align=right><B><FONT face=Verdana size=2>Logical packages</FONT></B> 
       </P></TD>
-    <TD vAlign=top width="70%"><FONT face=Verdana size=2>The Java Packages 
-      view (Java Browsing perspective) coalesces packages of the same name 
-      across source folders within a project. This presents a view of a logical 
-      package.</FONT> </TD></tr>	
+    <TD vAlign=top width="70%">
+      <p><FONT face=Verdana size=2>The Java Packages view (Java Browsing perspective) 
+        coalesces packages of the same name across source folders within a project. 
+        This presents a view of a logical package.</FONT> </p>
+      <p><img src="images/logicalPackages.gif" width="313" height="219"></p>
+    </TD></tr>	
    <TR>
     <TD vAlign=top colSpan=2>
       <HR>
@@ -909,11 +914,13 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     <TD vAlign=top align=left width="30%">
       <P align=right><B><FONT face=Verdana size=2>Sort members</FONT></B> 
 </P></TD>
-    <TD width="70%"><FONT face=Verdana size=2>There is now a <B>Sort 
-      Members</B> action on the context menu of Java compilation units and top 
-      level types that rearranges the members of a compilation unit according to 
-      the category order defined in the <B>Java / Appearance / Member Sort 
-      Order</B> preference page.</FONT></TD></TR>	 
+    <TD width="70%">
+      <p><FONT face=Verdana size=2>There is now a <B>Sort Members</B> action on 
+        the context menu of Java compilation units and top level types that rearranges 
+        the members of a compilation unit according to the category order defined 
+        in the <B>Java / Appearance / Member Sort Order</B> preference page.</FONT></p>
+      <p><img src="images/members_sort_order.gif" width="413" height="235"></p>
+    </TD></TR>	 
   <TR>
     <TD colSpan=2>
       <HR>
@@ -1028,10 +1035,13 @@ border=0></FONT></P></TD></TR>
     <TD vAlign=top align=left width="30%">
       <P align=right><B><FONT face=Verdana size=2>Add Delegate Methods 
       wizard</FONT></B> </P></TD>
-    <TD width="70%"><FONT face=Verdana size=2>Similar to the <B>Create 
-      Getter/Setter</B> wizard, you can now easily generate delegate methods 
-      (methods that delegate to a method provided by an instance 
-      variable).&nbsp; The action is available on all types with fields.</FONT> 
+    <TD width="70%">
+      <p><font face="Verdana" size="2">You can now easily generate delegate methods 
+        (methods that delegate to a method provided by an instance variable) by 
+        using the <b>Generate Delegate Methods</b> action.&nbsp; The action is 
+        available on all types with fields.</font> </p>
+      <p><img src="images/generate_delegate_methods.gif" width="324" height="408"> 
+      </p>
     </TD></TR>
 	  <tr> 
     <td colspan=2> 
