Linked resource doc review

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-13.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-13.htm
@@ -16,14 +16,14 @@ in the file system outside of the project's location.  These special resources m
 have a project as their parent resource.  Linked folders and files can be
 used to add resources to your project that for some reason must be stored in a 
 certain place outside of your project.  For example, a linked folder can be used
-to store builder output separately from your source files.
+to store build output separately from your source files.
 </p>
 <p>
 You can even use linked resources to overlap other resources in the workspace, so
 resources from one project can appear in another project.
 If you do want to have overlapping resources in your workspace, do so with caution.
 Keep in mind that this means changing a resource in one place will cause simultaneous 
-changes in the duplicate resource.  Deleting one duplicate resource may delete both!
+changes in the duplicate resource.  Deleting one duplicate resource will delete both!
 </p>
 <p>
 Special rules apply when manipulating linked resources.  Since they must be located
